--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -2733,328 +2733,6 @@ input[type="button"].btn-block {
     .custom-select {
       transition: none; } }
 
-.nav {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none; }
-
-.nav-link {
-  display: block;
-  padding: 0.5rem 1rem; }
-  .nav-link:hover, .nav-link:focus {
-    text-decoration: none; }
-  .nav-link.disabled {
-    color: #6c757d; }
-
-.nav-tabs {
-  border-bottom: 1px solid #dee2e6; }
-  .nav-tabs .nav-item {
-    margin-bottom: -1px; }
-  .nav-tabs .nav-link {
-    border: 1px solid transparent;
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem; }
-    .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-      border-color: #e9ecef #e9ecef #dee2e6; }
-    .nav-tabs .nav-link.disabled {
-      color: #6c757d;
-      background-color: transparent;
-      border-color: transparent; }
-  .nav-tabs .nav-link.active,
-  .nav-tabs .nav-item.show .nav-link {
-    color: #495057;
-    background-color: #fff;
-    border-color: #dee2e6 #dee2e6 #fff; }
-  .nav-tabs .dropdown-menu {
-    margin-top: -1px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0; }
-
-.nav-pills .nav-link {
-  border-radius: 0.25rem; }
-
-.nav-pills .nav-link.active,
-.nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #007bff; }
-
-.nav-fill .nav-item {
-  flex: 1 1 auto;
-  text-align: center; }
-
-.nav-justified .nav-item {
-  flex-basis: 0;
-  flex-grow: 1;
-  text-align: center; }
-
-.tab-content > .tab-pane {
-  display: none; }
-
-.tab-content > .active {
-  display: block; }
-
-.navbar {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem 1rem; }
-  .navbar > .container,
-  .navbar > .container-fluid {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between; }
-
-.navbar-brand {
-  display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
-  margin-right: 1rem;
-  font-size: 1.25rem;
-  line-height: inherit;
-  white-space: nowrap; }
-  .navbar-brand:hover, .navbar-brand:focus {
-    text-decoration: none; }
-
-.navbar-nav {
-  display: flex;
-  flex-direction: column;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none; }
-  .navbar-nav .nav-link {
-    padding-right: 0;
-    padding-left: 0; }
-  .navbar-nav .dropdown-menu {
-    position: static;
-    float: none; }
-
-.navbar-text {
-  display: inline-block;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem; }
-
-.navbar-collapse {
-  flex-basis: 100%;
-  flex-grow: 1;
-  align-items: center; }
-
-.navbar-toggler {
-  padding: 0.25rem 0.75rem;
-  font-size: 1.25rem;
-  line-height: 1;
-  background-color: transparent;
-  border: 1px solid transparent;
-  border-radius: 0.25rem; }
-  .navbar-toggler:hover, .navbar-toggler:focus {
-    text-decoration: none; }
-  .navbar-toggler:not(:disabled):not(.disabled) {
-    cursor: pointer; }
-
-.navbar-toggler-icon {
-  display: inline-block;
-  width: 1.5em;
-  height: 1.5em;
-  vertical-align: middle;
-  content: "";
-  background: no-repeat center center;
-  background-size: 100% 100%; }
-
-@media (max-width: 575.98px) {
-  .navbar-expand-sm > .container,
-  .navbar-expand-sm > .container-fluid {
-    padding-right: 0;
-    padding-left: 0; } }
-
-@media (min-width: 576px) {
-  .navbar-expand-sm {
-    flex-flow: row nowrap;
-    justify-content: flex-start; }
-    .navbar-expand-sm .navbar-nav {
-      flex-direction: row; }
-      .navbar-expand-sm .navbar-nav .dropdown-menu {
-        position: absolute; }
-      .navbar-expand-sm .navbar-nav .nav-link {
-        padding-right: 0.5rem;
-        padding-left: 0.5rem; }
-    .navbar-expand-sm > .container,
-    .navbar-expand-sm > .container-fluid {
-      flex-wrap: nowrap; }
-    .navbar-expand-sm .navbar-collapse {
-      display: flex !important;
-      flex-basis: auto; }
-    .navbar-expand-sm .navbar-toggler {
-      display: none; } }
-
-@media (max-width: 767.98px) {
-  .navbar-expand-md > .container,
-  .navbar-expand-md > .container-fluid {
-    padding-right: 0;
-    padding-left: 0; } }
-
-@media (min-width: 768px) {
-  .navbar-expand-md {
-    flex-flow: row nowrap;
-    justify-content: flex-start; }
-    .navbar-expand-md .navbar-nav {
-      flex-direction: row; }
-      .navbar-expand-md .navbar-nav .dropdown-menu {
-        position: absolute; }
-      .navbar-expand-md .navbar-nav .nav-link {
-        padding-right: 0.5rem;
-        padding-left: 0.5rem; }
-    .navbar-expand-md > .container,
-    .navbar-expand-md > .container-fluid {
-      flex-wrap: nowrap; }
-    .navbar-expand-md .navbar-collapse {
-      display: flex !important;
-      flex-basis: auto; }
-    .navbar-expand-md .navbar-toggler {
-      display: none; } }
-
-@media (max-width: 991.98px) {
-  .navbar-expand-lg > .container,
-  .navbar-expand-lg > .container-fluid {
-    padding-right: 0;
-    padding-left: 0; } }
-
-@media (min-width: 992px) {
-  .navbar-expand-lg {
-    flex-flow: row nowrap;
-    justify-content: flex-start; }
-    .navbar-expand-lg .navbar-nav {
-      flex-direction: row; }
-      .navbar-expand-lg .navbar-nav .dropdown-menu {
-        position: absolute; }
-      .navbar-expand-lg .navbar-nav .nav-link {
-        padding-right: 0.5rem;
-        padding-left: 0.5rem; }
-    .navbar-expand-lg > .container,
-    .navbar-expand-lg > .container-fluid {
-      flex-wrap: nowrap; }
-    .navbar-expand-lg .navbar-collapse {
-      display: flex !important;
-      flex-basis: auto; }
-    .navbar-expand-lg .navbar-toggler {
-      display: none; } }
-
-@media (max-width: 1199.98px) {
-  .navbar-expand-xl > .container,
-  .navbar-expand-xl > .container-fluid {
-    padding-right: 0;
-    padding-left: 0; } }
-
-@media (min-width: 1200px) {
-  .navbar-expand-xl {
-    flex-flow: row nowrap;
-    justify-content: flex-start; }
-    .navbar-expand-xl .navbar-nav {
-      flex-direction: row; }
-      .navbar-expand-xl .navbar-nav .dropdown-menu {
-        position: absolute; }
-      .navbar-expand-xl .navbar-nav .nav-link {
-        padding-right: 0.5rem;
-        padding-left: 0.5rem; }
-    .navbar-expand-xl > .container,
-    .navbar-expand-xl > .container-fluid {
-      flex-wrap: nowrap; }
-    .navbar-expand-xl .navbar-collapse {
-      display: flex !important;
-      flex-basis: auto; }
-    .navbar-expand-xl .navbar-toggler {
-      display: none; } }
-
-.navbar-expand {
-  flex-flow: row nowrap;
-  justify-content: flex-start; }
-  .navbar-expand > .container,
-  .navbar-expand > .container-fluid {
-    padding-right: 0;
-    padding-left: 0; }
-  .navbar-expand .navbar-nav {
-    flex-direction: row; }
-    .navbar-expand .navbar-nav .dropdown-menu {
-      position: absolute; }
-    .navbar-expand .navbar-nav .nav-link {
-      padding-right: 0.5rem;
-      padding-left: 0.5rem; }
-  .navbar-expand > .container,
-  .navbar-expand > .container-fluid {
-    flex-wrap: nowrap; }
-  .navbar-expand .navbar-collapse {
-    display: flex !important;
-    flex-basis: auto; }
-  .navbar-expand .navbar-toggler {
-    display: none; }
-
-.navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9); }
-  .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-    color: rgba(0, 0, 0, 0.9); }
-
-.navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5); }
-  .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-    color: rgba(0, 0, 0, 0.7); }
-  .navbar-light .navbar-nav .nav-link.disabled {
-    color: rgba(0, 0, 0, 0.3); }
-
-.navbar-light .navbar-nav .show > .nav-link,
-.navbar-light .navbar-nav .active > .nav-link,
-.navbar-light .navbar-nav .nav-link.show,
-.navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9); }
-
-.navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.5);
-  border-color: rgba(0, 0, 0, 0.1); }
-
-.navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
-
-.navbar-light .navbar-text {
-  color: rgba(0, 0, 0, 0.5); }
-  .navbar-light .navbar-text a {
-    color: rgba(0, 0, 0, 0.9); }
-    .navbar-light .navbar-text a:hover, .navbar-light .navbar-text a:focus {
-      color: rgba(0, 0, 0, 0.9); }
-
-.navbar-dark .navbar-brand {
-  color: #fff; }
-  .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
-    color: #fff; }
-
-.navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5); }
-  .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-    color: rgba(255, 255, 255, 0.75); }
-  .navbar-dark .navbar-nav .nav-link.disabled {
-    color: rgba(255, 255, 255, 0.25); }
-
-.navbar-dark .navbar-nav .show > .nav-link,
-.navbar-dark .navbar-nav .active > .nav-link,
-.navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .nav-link.active {
-  color: #fff; }
-
-.navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.5);
-  border-color: rgba(255, 255, 255, 0.1); }
-
-.navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
-
-.navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5); }
-  .navbar-dark .navbar-text a {
-    color: #fff; }
-    .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
-      color: #fff; }
-
 .card {
   position: relative;
   display: flex;
@@ -6317,6 +5995,13 @@ a.text-dark:hover, a.text-dark:focus {
   margin: 0;
   box-sizing: border-box; }
 
+ul,
+li {
+  list-style: none; }
+
+a:hover {
+  text-decoration: none; }
+
 @font-face {
   font-family: "Proxima";
   src: url("../fonts/ProximaNova_Regular.otf"); }
@@ -6329,13 +6014,200 @@ body {
 .container {
   width: 1170px; }
 
-header {
-  background: url(../images/header-bg.png); }
-
 .header {
-  background-size: cover; }
+  position: relative;
+  color: #fff; }
+  .header__bg {
+    height: 1200px;
+    background: url("../images/header-bg.png"); }
+    .header__bg:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background: rgba(45, 42, 80, 0.9); }
+  .header__slogan {
+    z-index: 100;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff; }
+    .header__slogan--1 {
+      font-size: 20px; }
+    .header__slogan--2 {
+      font-size: 35px;
+      font-weight: bold; }
 
-.nav-item {
-  padding: 16px 30px; }
-  .nav-item:hover {
-    background: #00a8ff; }
+.nav-container {
+  width: 100%;
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0); }
+  .nav-container.sticky {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 100;
+    background: #fff;
+    transition: transform .2s; }
+    .nav-container.sticky .nav {
+      margin-top: 15px; }
+      .nav-container.sticky .nav .logo {
+        display: none; }
+      .nav-container.sticky .nav .fix {
+        display: block; }
+      .nav-container.sticky .nav__link {
+        color: #bbbbbb; }
+        .nav-container.sticky .nav__link:hover {
+          color: #fff; }
+
+.nav {
+  display: flex;
+  width: 1500px;
+  justify-content: space-between;
+  margin: 77px auto 0;
+  align-items: center; }
+  .nav__brand .logo {
+    display: block; }
+  .nav__brand .fix {
+    display: none; }
+  .nav__list {
+    display: flex;
+    justify-content: space-between; }
+  .nav__link {
+    padding: 14px 28px;
+    display: block;
+    color: #fff; }
+    .nav__link:hover {
+      background: #00a8ff;
+      color: #fff; }
+
+.box {
+  position: relative; }
+  .box .list {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: -215px; }
+  .box__item {
+    width: 370px;
+    height: 286px;
+    margin: 0 15px;
+    position: relative;
+    overflow: hidden; }
+    .box__item:nth-child(3n+1) {
+      margin-left: 0; }
+      .box__item:nth-child(3n+1) .overlay-item {
+        background-image: url(../images/header-item-bg.png); }
+        .box__item:nth-child(3n+1) .overlay-item::before {
+          background: rgba(244, 67, 54, 0.8); }
+    .box__item:nth-child(3n+2) .overlay-item::before {
+      background: rgba(76, 175, 80, 0.8); }
+    .box__item:nth-child(3n+3) {
+      margin-right: 0; }
+      .box__item:nth-child(3n+3) .overlay-item::before {
+        background: rgba(7, 169, 238, 0.8); }
+    .box__item .overlay-item {
+      width: 370px;
+      height: 286px;
+      position: relative; }
+      .box__item .overlay-item::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        top: 0; }
+      .box__item .overlay-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+  .box__title {
+    position: absolute;
+    top: 0;
+    margin: 35px;
+    font-weight: 600; }
+  .box .slider {
+    position: absolute;
+    top: 95px; }
+    .box .slider__content {
+      padding: 15px 40px;
+      display: flex;
+      justify-content: space-between;
+      position: relative; }
+      .box .slider__content:nth-child(3n+1)::before {
+        content: '';
+        background: url(../images/icon/jump.png) no-repeat;
+        width: 16px;
+        height: 26px;
+        display: block;
+        position: absolute;
+        top: 18px; }
+      .box .slider__content:nth-child(3n+2)::before {
+        content: '';
+        background: url(../images/icon/gym.png) no-repeat;
+        width: 20px;
+        height: 20px;
+        display: block;
+        position: absolute;
+        top: 18px; }
+      .box .slider__content:nth-child(3n+3)::before {
+        content: '';
+        background: url(../images/icon/heart.png) no-repeat;
+        width: 23px;
+        height: 20px;
+        display: block;
+        position: absolute;
+        top: 18px; }
+      .box .slider__content span:first-child {
+        padding-left: 35px; }
+    .box .slider .owl-dots {
+      position: absolute;
+      right: 30px;
+      top: -68px; }
+      .box .slider .owl-dots .owl-dot {
+        outline: none; }
+        .box .slider .owl-dots .owl-dot.active span, .box .slider .owl-dots .owl-dot:hover span {
+          background: #fff; }
+        .box .slider .owl-dots .owl-dot span {
+          background: none;
+          border-radius: 0; }
+      .box .slider .owl-dots span {
+        width: 8px;
+        height: 8px;
+        border: 2px solid #fff;
+        margin: 5px 3px; }
+  .box .membership .content {
+    position: absolute;
+    bottom: 0;
+    padding: 35px; }
+    .box .membership .content span {
+      display: block;
+      font-size: 24px; }
+      .box .membership .content span:last-child {
+        font-size: 36px;
+        font-weight: 600;
+        text-transform: capitalize; }
+  .box .membership:hover .overlay-item::before {
+    background: rgba(255, 255, 255, 0.5); }
+  .box .membership:hover .box__title {
+    display: none; }
+  .box .membership:hover .content {
+    position: relative; }
+  .box .membership:hover .membership__link {
+    display: block; }
+  .box .membership__link {
+    padding: 15px 30px;
+    border: 1px solid #fff;
+    position: absolute;
+    bottom: 0;
+    margin: 35px;
+    color: #fff;
+    font-weight: 600;
+    display: none; }
