--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -6019,7 +6019,8 @@ body {
   color: #fff; }
   .header__bg {
     height: 1200px;
-    background: url("../images/header-bg.png"); }
+    background: url(../images/header-bg.png) no-repeat;
+    background-size: cover; }
     .header__bg:before {
       content: '';
       position: absolute;
@@ -6028,6 +6029,17 @@ body {
       left: 0;
       bottom: 0;
       background: rgba(45, 42, 80, 0.9); }
+    .header__bg::after {
+      content: '';
+      background-color: #372c4c;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: -1px;
+      transform: skewY(-1.5deg);
+      transform-origin: 100%;
+      z-index: -1; }
   .header__slogan {
     z-index: 100;
     position: absolute;
@@ -6055,7 +6067,7 @@ body {
     top: 0;
     z-index: 100;
     background: #fff;
-    transition: transform .2s; }
+    transition: all 500ms cubic-bezier(0.55, 0, 0.1, 1); }
     .nav-container.sticky .nav {
       margin-top: 15px; }
       .nav-container.sticky .nav .logo {
@@ -6101,33 +6113,35 @@ body {
     margin: 0 15px;
     position: relative;
     overflow: hidden; }
-    .box__item:nth-child(3n+1) {
-      margin-left: 0; }
-      .box__item:nth-child(3n+1) .overlay-item {
-        background-image: url(../images/header-item-bg.png); }
-        .box__item:nth-child(3n+1) .overlay-item::before {
-          background: rgba(244, 67, 54, 0.8); }
-    .box__item:nth-child(3n+2) .overlay-item::before {
-      background: rgba(76, 175, 80, 0.8); }
-    .box__item:nth-child(3n+3) {
-      margin-right: 0; }
-      .box__item:nth-child(3n+3) .overlay-item::before {
+    .box__item::before {
+      position: absolute;
+      content: '';
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      top: 0; }
+    .box__item.schedule {
+      margin-left: 0;
+      background-image: url(../images/header-item-bg.png); }
+      .box__item.schedule::before {
+        background-color: rgba(244, 67, 54, 0.8); }
+    .box__item.membership {
+      transition: all 0.3s ease; }
+      .box__item.membership .img {
+        background: url(../images/header-item-bg.png) no-repeat;
+        height: 100%; }
+        .box__item.membership .img::before {
+          background: rgba(76, 175, 80, 0.8); }
+      .box__item.membership:hover img {
+        transition: all 0.3s ease-in-out;
+        transform: translateX(-20px); }
+      .box__item.membership::before {
+        background: rgba(76, 175, 80, 0.8); }
+    .box__item.clients {
+      margin-right: 0;
+      background-image: url(../images/header-item-bg.png); }
+      .box__item.clients::before {
         background: rgba(7, 169, 238, 0.8); }
-    .box__item .overlay-item {
-      width: 370px;
-      height: 286px;
-      position: relative; }
-      .box__item .overlay-item::before {
-        position: absolute;
-        content: '';
-        width: 100%;
-        bottom: 0;
-        left: 0;
-        top: 0; }
-      .box__item .overlay-item img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; }
   .box__title {
     position: absolute;
     top: 0;
@@ -6135,12 +6149,15 @@ body {
     font-weight: 600; }
   .box .slider {
     position: absolute;
-    top: 95px; }
+    top: 114px; }
     .box .slider__content {
       padding: 15px 40px;
       display: flex;
       justify-content: space-between;
-      position: relative; }
+      position: relative;
+      border-bottom: 1px solid #ff5f53; }
+      .box .slider__content:last-child {
+        border: none; }
       .box .slider__content:nth-child(3n+1)::before {
         content: '';
         background: url(../images/icon/jump.png) no-repeat;
@@ -6167,10 +6184,12 @@ body {
         top: 18px; }
       .box .slider__content span:first-child {
         padding-left: 35px; }
+      .box .slider__content span:last-child {
+        font-weight: 600; }
     .box .slider .owl-dots {
       position: absolute;
       right: 30px;
-      top: -68px; }
+      top: -85px; }
       .box .slider .owl-dots .owl-dot {
         outline: none; }
         .box .slider .owl-dots .owl-dot.active span, .box .slider .owl-dots .owl-dot:hover span {
@@ -6183,10 +6202,28 @@ body {
         height: 8px;
         border: 2px solid #fff;
         margin: 5px 3px; }
+  .box .membership:hover::before {
+    background: rgba(176, 186, 177, 0.8);
+    z-index: 9; }
+  .box .membership:hover .box__title {
+    opacity: 0; }
+  .box .membership:hover .content {
+    transform: translateY(-150%); }
+  .box .membership:hover .membership__link {
+    width: auto;
+    height: auto;
+    transition: all 0.3s ease-in-out;
+    transform: scale(1); }
+  .box .membership .box__title {
+    transition: all 0.3s ease-in-out;
+    opacity: 1; }
   .box .membership .content {
     position: absolute;
     bottom: 0;
-    padding: 35px; }
+    margin: 35px;
+    z-index: 9;
+    transform: translateY(0%);
+    transition: .3s ease-in-out; }
     .box .membership .content span {
       display: block;
       font-size: 24px; }
@@ -6194,20 +6231,70 @@ body {
         font-size: 36px;
         font-weight: 600;
         text-transform: capitalize; }
-  .box .membership:hover .overlay-item::before {
-    background: rgba(255, 255, 255, 0.5); }
-  .box .membership:hover .box__title {
-    display: none; }
-  .box .membership:hover .content {
-    position: relative; }
-  .box .membership:hover .membership__link {
-    display: block; }
   .box .membership__link {
     padding: 15px 30px;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     position: absolute;
     bottom: 0;
     margin: 35px;
     color: #fff;
     font-weight: 600;
-    display: none; }
+    transform: scale(0);
+    z-index: 10; }
+    .box .membership__link:hover {
+      background: #fff;
+      color: #07a9ee; }
+  .box .clients .item {
+    padding: 0 40px 40px 40px; }
+    .box .clients .item p {
+      font-size: 26px;
+      font-weight: 600;
+      margin-bottom: 40px; }
+
+.section {
+  padding: 150px 0 160px 0; }
+  .section__header {
+    text-align: center;
+    margin-bottom: 160px; }
+  .section__title {
+    font-size: 48px;
+    color: #333333;
+    font-weight: 600; }
+  .section__desc {
+    font-size: 24px; }
+
+.services {
+  padding: 240px 0; }
+  .services__item {
+    flex: 0 0 31.33333%;
+    height: 320px;
+    padding: 90px 50px;
+    text-align: center;
+    border: 1px solid #dddddd; }
+    .services__item:hover {
+      padding: 40px 50px 65px 50px; }
+      .services__item:hover .services__img-container {
+        transform: translateY(-65px); }
+      .services__item:hover .services__title {
+        transform: translateY(-55px); }
+      .services__item:hover .services__desc {
+        width: auto;
+        height: auto;
+        transition: all 0.3s ease-in-out;
+        transform: scale(1);
+        margin-top: -20px; }
+    .services__item:nth-child(3n+2) {
+      margin: 0 30px; }
+  .services__img-container {
+    background: #fff;
+    display: inline-block;
+    transform: translateY(0%);
+    transition: .3s ease-in-out; }
+  .services__title {
+    color: #333333;
+    font-weight: 600;
+    padding-top: 50px;
+    transform: translateY(0%);
+    transition: .3s ease-in-out; }
+  .services__desc {
+    transform: scale(0); }
