--- a/root/scss/styles.scss
+++ b/root/scss/styles.scss
@@ -428,13 +428,23 @@ body {
   &__desc {
     font-size: 24px;
   }
+
+  .row {
+    .col-md-4 {
+      flex: 0 0 31.33333%;
+      padding: 0;
+
+      &:nth-child(3n+2) {
+        margin: 0 30px;
+      }
+    }
+  }
 }
 
 .services {
   padding: 240px 0;
 
   &__item {
-    flex: 0 0 31.33333%;
     height: 320px;
     padding: 90px 50px;
     text-align: center;
@@ -449,21 +459,18 @@ body {
 
       .services__title {
         transform: translateY(-55px);
-
+        animation: bounceIn 0.75s;
       }
 
       .services__desc {
         width: auto;
         height: auto;
-        transition: all 0.3s ease-in-out;
+        // transition: all 0.3s ease-in-out;
         transform: scale(1);
         margin-top: -20px;
+        animation: bounceIn 0.75s;
         // display: block;
       }
-    }
-
-    &:nth-child(3n+2) {
-      margin: 0 30px;
     }
   }
 
@@ -485,5 +492,119 @@ body {
   &__desc {
     transform: scale(0);
     // display: none;
+  }
+}
+
+@keyframes bounceIn {
+
+  from {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+
+  50% {
+    opacity: 1;
+    // -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    // transform: scale3d(0.3, 0.3, 0.3);
+  }
+
+
+}
+
+.team {
+  background: #f7f7f7;
+
+  &__item {
+    text-align: center;
+
+    &:hover {
+      .team__hover {
+        opacity: 1;
+      }
+
+      .team__bg-img {}
+
+    }
+  }
+
+  &__header {
+    position: relative;
+  }
+
+  &__hover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all ease .5s;
+    transition: all ease .5s;
+    opacity: 0;
+    background: rgba(#00a8ff, 0.9);
+
+    &__content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      span {
+        display: block;
+        
+        &:first-child {
+          font-size: 32px;
+          font-weight: 600;
+          color: #fff;
+        }
+      }
+    }
+  }
+
+  &__bg-img {
+    width: 100%;
+  }
+
+  &__ava {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    position: absolute;
+    top: 120px;
+    left: 50%;
+    transform: translate(-50%, 50%);
+
+    &__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
+
+  &__content {
+    padding: 110px 90px 60px 90px;
+    background: #fff;
+  }
+
+  &__name {
+    font-size: 24px;
+    color: #333333;
+    font-weight: 600;
+  }
+
+  &__desc {
+    margin-bottom: 50px;
+  }
+
+  &__link {
+    padding: 13px 31px;
+    color: #00a8ff;
+    border: 1px solid #00a8ff;
+    display: inline-block;
+    text-transform: capitalize;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background: #00a8ff;
+      color: #fff;
+    }
   }
 }
